# cv-builder

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: client.py  graph.py  state.py
backend/app/ai/framework/: errors.py  graph_runner.py
backend/app/ai/nodes/: company_research.py  gap_questions.py  jd_analysis.py  jd_extract.py  positioning.py  reviewer.py  writer.py
backend/app/api/: applications.py  master_cv.py  settings.py
backend/app/models/: __init__.py  application.py  documents.py  master_cv.py  review.py
backend/app/services/: jd_ingestion.py  pdf_renderer.py  settings_storage.py  storage.py
backend/app/static/: ats.css  cover_letter.css  portfolio.css
backend/app/templates/: ats_cv.html  cover_letter.html  portfolio_cv.html
backend/tests/: test_ai_client.py  test_application_storage.py  test_applications_api.py  test_document_models.py  test_e2e_smoke.py  test_health.py  test_jd_ingestion.py  test_master_cv_api.py  test_pdf_renderer.py  test_settings_api.py  test_storage.py  test_workflow_api.py  test_workflow_skeleton.py
backend/tests/ai/framework/: test_errors.py  test_graph_runner.py
docs/: README.md  architecture.md  deployment.md  design.md  development.md  json-schema.md  project-zh.md  runbook-zh.md  usage.md  user-guide-zh.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: browser-pool.ts  (+8 more)
(+53 files in other folders)
